--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "mysql2": "^3.2.3",
     "socket.io": "^4.6.1"
   }
 }
